--- a/api-service/package.json
+++ b/api-service/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.1.0",
     "ts-node-dev": "^2.0.0"
   }
