--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -29,6 +29,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  http: "0.13.3"
+  date_field: "2.1.2"
+  flutter_datetime_picker: ^1.5.1
+  intl: ^0.17.0
   flutter:
     sdk: flutter
 
