--- a/scraper-service/package.json
+++ b/scraper-service/package.json
@@ -10,6 +10,7 @@
   "author": "Slickerius",
   "license": "ISC",
   "dependencies": {
+    "@types/node-cron": "^3.0.7",
     "dotenv": "^16.0.3",
     "mongoose": "^7.1.0",
     "node-cron": "^3.0.2",
